# PrsAi_PPT_Translation_MCP

./: README.md
PrsAiPPT-MCP/: .env.example  README.md  pyproject.toml
PrsAiPPT-MCP/src/prs_ai_ppt_mcp/: README.md  __init__.py  __main__.py  server.py
