[project]
name = "prs-ai-ppt-mcp"
version = "0.1.0"
description = "A scaffold for Python MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
prs-ai-ppt-mcp = "prs_ai_ppt_mcp.__main__:main"
